# devsnap

./: .gitignore  README.md  go.mod
cmd/devenv/: main.go
examples/node-npm/: package-lock.json  package.json
examples/node-pnpm/: package.json
examples/node-yarn/: package.json
examples/python-poetry/: pyproject.toml
internal/cli/: doctor.go  freeze.go  main.go  print.go  restore.go  root.go
internal/detect/: node.go  python.go
internal/detectors/: node.go  python.go
internal/engine/: engine.go
internal/paths/: paths.go
internal/runner/: runner.go
internal/snapshot/: snapshot.go
internal/toolchain/: version.go
scripts/: build-release.ps1  test-examples.ps1  test-examples.sh
