[tool.poetry]
name = "devsnap-example-python-poetry"
version = "0.0.0"
description = "Example project for devsnap (poetry)."
authors = ["devsnap <devsnap@example.invalid>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

